<resources>
    <string name="app_name">BlogIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_signUp">Not a user?Sign Up!</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_link_to_login">Already a user?Login!</string>
    <string name="minimum_password">Password must have at least 6 characters!</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_back">Back</string>
    <string name="hint_name">Name</string>
    <string name="hint_password2">Confirm Password</string>
    <string name="menu_share">Share</string>
    <string name="menu_signout">Sign Out</string>
    <string name="account">Account</string>
    <string name="hint_new_email">New Email</string>
    <string name="new_pass">New Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="prompt_password">Password</string>
    <string name="hint_bio">My Bio</string>
    <string name="hint_website">Website</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="communication">Communication</string>

    <!--    &lt;!&ndash; Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). &ndash;&gt;-->
<!--    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>-->
<!--    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->
<!--    &lt;!&ndash; Twitter consumer key and secret &ndash;&gt;-->
<!--    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
<!--    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->

</resources>
